resolved merge errors